# swagger.json
@@ -1,15 +1,23 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "version": "1.0.1",
+    "title": "REST API of MERN Project",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:5000",
   "basePath": "/",
-  "schemes": [
-    "http"
+  "tags": [
+    {
+      "name": "Users",
+      "description": "Endpoint of Users"
+    },
+    {
+      "name": "Places",
+      "description": "Endpoint of Places"
+    }
   ],
+  "schemes": "http",
   "paths": {
     "/api/places/{pid}": {
       "get": {
@@ -27,7 +35,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Places"
+            }
           }
         }
       },
@@ -125,9 +136,6 @@
                 "description": {
                   "example": "any"
                 },
-                "coordinates": {
-                  "example": "any"
-                },
                 "address": {
                   "example": "any"
                 },
@@ -154,7 +162,10 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Users"
+            }
           }
         }
       }
@@ -221,6 +232,150 @@
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "Users": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "u1"
+        },
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "test@gmail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "test12pass"
+        }
+      }
+    },
+    "Places": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "p1"
+        },
+        "title": {
+          "type": "string",
+          "example": "Empire state building"
+        },
+        "description": {
+          "type": "string",
+          "example": "One of the most famous sky scrapers in the world!"
+        },
+        "location": {
+          "type": "object",
+          "properties": {
+            "lat": {
+              "type": "number",
+              "example": 40.7484474
+            },
+            "lng": {
+              "type": "number",
+              "example": -73.9878584
+            }
+          }
+        },
+        "address": {
+          "type": "string",
+          "example": "20 W 34th St, New York, NY 10001, Estados Unidos"
+        },
+        "creator": {
+          "type": "string",
+          "example": "u1"
+        }
+      }
+    },
+    "loginUser": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "YOUR_EMAIL@something.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "YOUR_PASSWORD"
+        }
+      },
+      "required": [
+        "email",
+        "password"
+      ]
+    },
+    "signup": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "YOUR_EMAIL@something.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "YOUR_PASSWORD"
+        }
+      },
+      "required": [
+        "name",
+        "email",
+        "password"
+      ]
+    },
+    "createPlace": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "Title of a Place"
+        },
+        "description": {
+          "type": "string",
+          "example": "Description of location"
+        },
+        "address": {
+          "type": "string",
+          "example": "Complete address of a Place"
+        },
+        "creator": {
+          "type": "string",
+          "example": "Creator name"
+        }
+      },
+      "required": [
+        "title",
+        "description",
+        "address",
+        "creator"
+      ]
+    },
+    "patchPlace": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "New title of a Place"
+        },
+        "description": {
+          "type": "string",
+          "example": "New description of a Place"
+        }
+      },
+      "required": [
+        "title",
+        "description"
+      ]
     }
   }
 }
